tests/NormalTests/paczka1/fuzzy1/36473543.err
Error in line 2: A12 A235 14,2
Error in line 20: 8fPFRnkkg S697 -1,2
